WebHelpers ChangeLog

0.2 (**svn**)
* Sync'd number helper, added number unit tests.
* Added markdown.py (python-markdown) for new markdown support in text helper.
* Added textile.py (PyTextile) for new textilize support in text helper.
* Brought asset/date/text helpers up to date with revision info.

0.1.3 (Release)
* Brought feedgenerator in line with Django's version, which fixed the missing
  support for feed categories and updated classes for new-style. Other minor
  feed updates as well. Now synced as of Django r3143.
* Fixed typo in feedgenerator import, reported by tiksin@free.fr.
* Added ``webhelpers.rails.asset_tag``, for generating links to other assets
  such as javascripts, stylesheets, and feeds.